2004-09-09  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/draw/tool-load.png: remade using an image from openclipart
	* boards/skins/default/directory.png: remade using an image from openclipart
	* boards/skins/default/file.png: remade by bruno
	* src/boards/draw.c: (item_event_move): fixed the rotation
	* src/boards/python/anim.py: removed internal item_rotate_relative. used this code
	to fix the implemetation of item_rotate_relative
	* src/gcompris/gameutil.c: (item_rotate_relative): fixed using the implementation of Yves
	from anim.py

2004-09-08  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/Makefile.am: added missing ballcatch.py. Thanks
	Jose.
	* src/boards/shapegame.c: (parse_doc): fixed annoying behaviour 
	where the last shape group is displayed instead of the very first.
	thanks Nabil.

2004-09-07  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/images/shift_key.png: create by bruno
	* boards/read_colors/read_colors_background.png: added white and grey spot where needed
	to avoid confusion
	* boards/reversecount.xml.in: fixed typos
	* boards/scalesboard.xml.in: fixed typos
	* src/boards/python/ballcatch.py: added shift keys

2004-09-05  Bruno coudoin  <bruno.coudoin@free.fr>

	Major image review. I took several images from openclipart (http://www.openclipart.org).
	I made some new images with inkscape in SVG. For those I felt they have an acceptable
	quality, I sent them to openclipart and so released them as public domain.
	
	* boards/boardicons/ballcatch.png: openclipart
	* boards/boardicons/book.png:openclipart
	* boards/boardicons/fun.png:openclipart
	* boards/boardicons/leftright.png: bruno
	* boards/followline.xml.in: updated text
	* boards/gcompris/misc/apple.png: openclipart
	* boards/gcompris/misc/bottle.png: bruno, released under public domain
	* boards/gcompris/misc/cerise.png: openclipart
	* boards/gcompris/misc/cloud.png: openclipart
	* boards/gcompris/misc/football.png: openclipart